clusters/template/app-tcproute/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: ${APP}-${LOCATION}
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ${LOCATION}
      namespace: common
      sectionName: ${APP}
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: ${APP}
          port: ${APP_PORT}
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: ${APP}-cdn
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cdn
      namespace: common
      sectionName: ${APP}
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: ${APP}
